Change plugin name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-speedup",
+  "name": "wp-accelerate",
   "version": "1.0.0",
   "main": "lazyload.js",
   "author": "Daniel Mejta<daniel@mejta.net>",
