--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "wp-accelerate",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "lazyload.js",
   "author": "Daniel Mejta<daniel@mejta.net>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --env=production --mode=production",
-    "start": "webpack --env=development --mode=development --watch"
+    "build": "gulp build",
+    "start": "gulp start"
   },
   "dependencies": {
     "intersection-observer": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^1.0.1",
+    "commander": "^2.19.0",
+    "delete": "^1.1.0",
+    "gulp": "^4.0.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-if": "^2.0.2",
+    "through2": "^3.0.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   },
