--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "core-js": "3.4.1",
+    "core-js": "^3.4.1",
     "intersection-observer": "^0.7.0"
   },
   "devDependencies": {
